# HelmholtzTransmissionProblemBEM

./: .gitignore  CMakeLists.txt  HelmholtzBEM.kdev4  HelmholtzTransmissionProblemBEM.kdev4  README.md  a.out
.kdev4/: HelmholtzBEM.kdev4  HelmholtzTransmissionProblemBEM.kdev4
cmake/functions/: GetEIGEN3.cmake  GetEigen.cmake  Getarpackpp.cmake  Getcomplex_bessel.cmake  add_all_subdirectories.cmake
cmake/modules/: FindEIGEN3.cmake
data/: README.md  file_roots_brent_square_rsvd_3.0_100_1e-6  file_roots_brent_square_rsvd_3.0_500_1e-6  file_roots_brent_square_rsvd_5.0_500_1e-6  file_roots_brent_square_rsvd_7.0_500_1e-6  file_roots_brent_square_rsvd_plot.m
doxygen/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt  SV_analysis.cpp  SV_analysis_by_der.cpp  SV_analysis_by_der2.cpp  SV_analysis_by_der_debug.cpp  SV_analysis_by_extrapolation.cpp  SV_analysis_by_extrapolation_debug.cpp  SV_analysis_contour.cpp  config.json  convergence_analysis_arnoldi.cpp  convergence_analysis_arnoldi_SVs.cpp  convergence_analysis_arnoldi_minima.cpp  debugging_SVs.cpp  direct_v_arnoldi.cpp  direct_v_arnoldi_1st_der.cpp  direct_v_arnoldi_2nd_der.cpp  dirichlet_example.cpp  find_res_by_SV_der.cpp  generate_solution.cpp  helmholtz_circle_test.cpp  helmholtz_circle_test_1.cpp  helmholtz_circle_test_2.cpp  matlab_read_test.cpp  neumann_example.cpp  parabolic_approximation.cpp  roots_brent_circle.cpp  roots_brent_circle_arnoldi.cpp  roots_brent_square.cpp  roots_brent_square_arnoldi.cpp  roots_brent_square_rsvd.cpp  roots_mixed_circle_arnoldi.cpp  roots_mixed_square_arnoldi.cpp  roots_newton_circle.cpp  roots_newton_circle_arnoldi.cpp  roots_newton_square.cpp  roots_newton_square_arnoldi.cpp  roots_newton_square_rsvd.cpp  roots_secant_circle.cpp  roots_seq_circle_arnoldi.cpp  roots_seq_square_arnoldi.cpp  (+15 more)
figures/: README.md
include/: 1_9_a.cpp  abstract_bem_space.hpp  abstract_parametrized_curve.hpp  adj_double_layer.hpp  arpp_eig_interface.hpp  cbessel.h  cbessel.hpp  compute_SV_der.hpp  continuous_space.hpp  data.hpp  dirichlet.hpp  discontinuous_space.hpp  double_layer.hpp  double_layer_correction.hpp  double_layer_der.hpp  double_layer_der2.hpp  double_layer_smooth.hpp  double_layer_test.hpp  find_roots.hpp  find_zeros.hpp  first_kind_direct_dirichlet.h  first_kind_direct_dirichlet.hpp  galerkin_matrix_builder.hpp  gauleg.hpp  genLaguerreRule.hpp  gen_sol.hpp  gen_sol_op.hpp  hypersingular.hpp  hypersingular_cont.hpp  hypersingular_correction.hpp  hypersingular_der.hpp  hypersingular_der2.hpp  hypersingular_discont.hpp  hypersingular_smooth.hpp  hypersingular_smooth_test.hpp  hypersingular_test.hpp  integral_gauss.hpp  logweight_quadrature.hpp  mass_matrix.hpp  neumann.hpp  (+24 more)
plotting_scripts/: SVs_convergence_analysis.py  SVs_convergence_analysis1.py  SVs_convergence_analysis2.py  SVs_convergence_analysis3.py  arnoldi_vs_eigen.py  convergence_analysis_arnoldi.py  minima_plots.py  minima_plots_mixed.py  minima_plots_seq.py  minima_plots_seq_smallestSV_panels.py  minima_plots_seq_smallestSV_seperate.py  order_convergence_analysis.py  zero_finding_dummy_functions.py
plotting_scripts/paper_plots/: SVs_convergence_plots_square.py  SVs_convergence_rates_square.py  SVs_convergence_rates_square_separate.py  minima_plots_seq_conv.py  minima_plots_seq_grid.py  minima_plots_seq_smallestSV_diffMarkers.py
source/: CMakeLists.txt  double_layer.cpp  double_layer_der.cpp  double_layer_der2.cpp  galerkin_matrix_builder.cpp  hypersingular.cpp  hypersingular_der.cpp  hypersingular_der2.cpp  mass_matrix.cpp  single_layer.cpp  single_layer_der.cpp  single_layer_der2.cpp
source/modules/: CMakeLists.txt
source/modules/solveBVP/: CMakeLists.txt  first_kind_direct_dirichlet.cpp
source/parametrizations/: parametrized_circular_arc.cpp  parametrized_fourier_sum.cpp  parametrized_line.cpp  parametrized_mesh.cpp  parametrized_polynomial.cpp  parametrized_semi_circle.cpp
source/quadrature/: genLaguerreRule.cpp
source/utilities/: CMakeLists.txt  arpp_eig_interface.cpp  cbessel.cpp  find_roots.cpp  gen_sol.cpp  gen_sol_op.cpp  randsvd.cpp  singular_values.cpp  singular_values_arnoldi.cpp  solvers.cpp  st_vec.cpp  st_vec_storage.cpp
src/: CMakeLists.txt  adj_double_layer.cpp  compute_SV_der.cpp  double_layer.cpp  double_layer_der.cpp  double_layer_der2.cpp  find_zeros.cpp  hypersingular.cpp  hypersingular_cont.cpp  hypersingular_correction.cpp  hypersingular_der.cpp  hypersingular_der2.cpp  hypersingular_discont.cpp  hypersingular_smooth.cpp  mass_matrix.cpp  single_layer.cpp  single_layer_correction.cpp  single_layer_der.cpp  single_layer_der2.cpp  single_layer_diff.cpp  single_layer_new.cpp  single_layer_smooth.cpp  solvers.cpp
src/Parametrizations/: CMakeLists.txt  parametrized_circular_arc.cpp  parametrized_fourier_sum.cpp  parametrized_line.cpp  parametrized_mesh.cpp  parametrized_polynomial.cpp  parametrized_semi_circle.cpp
src/Quadrature/: CMakeLists.txt  genLaguerreRule.cpp  logweight_quadrature.cpp
src/Utilities/: CMakeLists.txt  gen_sol_op.cpp  generate_solution.cpp  roots.cpp  singular_values.cpp  solvers.cpp
test/: CMakeLists.txt
test/googletest/: CMakeLists.txt  double_layer_smooth_test.cpp  double_layer_test.cpp  find_roots_test.cpp  hypersingular_smooth_test.cpp  hypersingular_test.cpp  mass_matrix_test.cpp  reuse_LU_test.cpp  single_layer_smooth_test.cpp  single_layer_test.cpp  solutions_test.cpp  st_vec.cpp
test/googletest/include/gtest/: gtest-spi.h
test/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
test/googletest/samples/: sample1_unittest.cc
test/googletest/scripts/: fuse_gtest_files.py
test/googletest/src/: gtest-death-test.cc  gtest.cc
test/googletest/test/: googletest-filter-unittest.py  googletest-list-tests-unittest.py  googletest-throw-on-failure-test.py
