include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(/u/drenner/cblib)

add_executable(dirichlet_example dirichlet_example.cpp)
add_executable(neumann_example neumann_example.cpp)
add_executable(transmission_problem_verification transmission_problem_verification.cpp)
add_executable(sv_derivative_verification_circle sv_derivative_verification_circle.cpp)
add_executable(sv_derivative_verification_square sv_derivative_verification_square.cpp)
add_executable(roots_newton_circle roots_newton_circle.cpp)
add_executable(roots_brent_square roots_brent_square.cpp)
add_executable(roots_newton_square roots_newton_square.cpp)
add_executable(roots_brent_circle roots_brent_circle.cpp)
add_executable(sv_derivative_full sv_derivative_full.cpp)
add_executable(sv_circle sv_circle.cpp)
add_executable(sv_square sv_square.cpp)
add_executable(parabolic_approximation parabolic_approximation.cpp)

add_library(generate_solution STATIC ../source/utilities/gen_sol.cpp)

target_link_libraries(dirichlet_example parametrizations generate_solution solvers complex_bessel)
target_link_libraries(neumann_example parametrizations generate_solution solvers complex_bessel)
target_link_libraries(transmission_problem_verification parametrizations generate_solution solvers complex_bessel)
target_link_libraries(sv_derivative_verification_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_newton_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_brent_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_newton_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_brent_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(sv_derivative_verification_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(sv_derivative_full parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(sv_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(sv_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(parabolic_approximation parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)


