include_directories(${PROJECT_SOURCE_DIR}/include)
link_directories(/u/drenner/cblib)

add_executable(dirichlet_example dirichlet_example.cpp)
add_executable(neumann_example neumann_example.cpp)
add_executable(transmission_problem_verification transmission_problem_verification.cpp)
add_executable(sv_derivative_verification_circle sv_derivative_verification_circle.cpp)
add_executable(sv_derivative_verification_square sv_derivative_verification_square.cpp)
add_executable(roots_newton_circle roots_newton_circle.cpp)
add_executable(roots_brent_square roots_brent_square.cpp)
add_executable(roots_newton_square roots_newton_square.cpp)
add_executable(roots_brent_circle roots_brent_circle.cpp)
add_executable(sv_derivative_full sv_derivative_full.cpp)
add_executable(sv_circle sv_circle.cpp)
add_executable(sv_square sv_square.cpp)
add_executable(parabolic_approximation parabolic_approximation.cpp)
add_executable(direct_v_arnoldi direct_v_arnoldi.cpp)
add_executable(direct_v_arnoldi_1st_der direct_v_arnoldi_1st_der.cpp)
add_executable(direct_v_arnoldi_2nd_der direct_v_arnoldi_2nd_der.cpp)
add_executable(convergence_analysis_arnoldi_minima convergence_analysis_arnoldi_minima.cpp)
add_executable(convergence_analysis_arnoldi_SVs convergence_analysis_arnoldi_SVs.cpp)
add_executable(using_starting_vectors using_starting_vectors.cpp)
add_executable(debugging_SVs debugging_SVs.cpp)


target_link_libraries(dirichlet_example parametrizations generate_solution solvers complex_bessel)
target_link_libraries(neumann_example parametrizations generate_solution solvers complex_bessel)
target_link_libraries(transmission_problem_verification parametrizations generate_solution solvers complex_bessel)
target_link_libraries(sv_derivative_verification_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_newton_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_brent_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_newton_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(roots_brent_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(sv_derivative_verification_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(sv_derivative_full parametrizations find_zeros complex_bessel compute_SV_der_arnoldi gen_sol_op )
target_link_libraries(sv_circle parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(sv_square parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(parabolic_approximation parametrizations find_zeros complex_bessel compute_SV_der gen_sol_op)
target_link_libraries(direct_v_arnoldi parametrizations find_zeros complex_bessel compute_SV_der compute_SV_der_arnoldi gen_sol_op blas lapack arpack st_vec_storage)
target_link_libraries(direct_v_arnoldi_1st_der parametrizations find_zeros complex_bessel
        compute_SV_der compute_SV_der_arnoldi gen_sol_op blas lapack arpack st_vec_storage)
target_link_libraries(direct_v_arnoldi_2nd_der parametrizations find_zeros complex_bessel
        compute_SV_der compute_SV_der_arnoldi gen_sol_op blas lapack arpack st_vec_storage)
target_link_libraries(convergence_analysis_arnoldi_minima parametrizations
        find_zeros complex_bessel compute_SV_der compute_SV_der_arnoldi gen_sol_op blas lapack arpack st_vec_storage)
target_link_libraries(convergence_analysis_arnoldi_SVs parametrizations
        find_zeros complex_bessel compute_SV_der compute_SV_der_arnoldi gen_sol_op blas lapack arpack st_vec_storage)
target_link_libraries(using_starting_vectors parametrizations find_zeros complex_bessel compute_SV_der compute_SV_der_arnoldi gen_sol_op blas lapack arpack st_vec_storage)
target_link_libraries(debugging_SVs parametrizations gen_sol_op complex_bessel )
